# toolkit

./: Cargo.toml  justfile
src/: algorithms.rs  bitfield.rs  bitvector.rs  darray.rs  elias_fano.rs  fenwick_tree.rs  gen_sequences.rs  lib.rs  stream_nibble.rs  stream_vbyte.rs  utils.rs
src/stream_vbyte/: utils.rs
