[package]
name = "toolkit"
version = "0.1.0"
edition = "2024"

[features]
# Enable streamvbyte compression, which requires SSSE3 (Intel/x86_64 only).
# Disabled by default to allow compilation on non-x86 platforms (e.g. Apple Silicon).
streamvbyte = []

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
mem_dbg = "0.3.4"
num = "0.4.3"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }

[[bin]]
name = "perf_streamvbyte"
path = "src/bin/perf_streamvbyte.rs"
required-features = ["streamvbyte"]

[profile.release]
opt-level = 3
lto = true
debug = true
